Added methods for the WebViewController

--- a/Friends/Base.lproj/Main.storyboard
+++ b/Friends/Base.lproj/Main.storyboard
@@ -147,6 +147,9 @@
                                                 <constraint firstItem="fuh-FJ-6cQ" firstAttribute="baseline" secondItem="HgY-Dm-CIK" secondAttribute="baseline" id="q26-hQ-bFM"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="HIx-RG-nY8" kind="show" identifier="showWebPage" id="cTE-oF-SlG"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -263,6 +266,49 @@
             </objects>
             <point key="canvasLocation" x="730" y="795"/>
         </scene>
+        <!--WebViewer-->
+        <scene sceneID="r7n-lX-Ncc">
+            <objects>
+                <viewController id="HIx-RG-nY8" customClass="WebViewController" customModule="Friends" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3KY-bs-nOo"/>
+                        <viewControllerLayoutGuide type="bottom" id="nWA-RB-jSV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ddK-SZ-T4f">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ra-CW-J6U">
+                                <rect key="frame" x="0.0" y="110" width="600" height="490"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="enter web address" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GT3-Th-UBH">
+                                <rect key="frame" x="20" y="72" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="webSearch" returnKeyType="go"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1ra-CW-J6U" secondAttribute="trailing" id="Fyt-Ff-Whh"/>
+                            <constraint firstItem="GT3-Th-UBH" firstAttribute="centerX" secondItem="1ra-CW-J6U" secondAttribute="centerX" id="IMt-br-awy"/>
+                            <constraint firstItem="1ra-CW-J6U" firstAttribute="top" secondItem="3KY-bs-nOo" secondAttribute="bottom" constant="46" id="QzZ-Sw-FOC"/>
+                            <constraint firstItem="GT3-Th-UBH" firstAttribute="top" secondItem="3KY-bs-nOo" secondAttribute="bottom" constant="8" id="T3U-75-0WG"/>
+                            <constraint firstItem="1ra-CW-J6U" firstAttribute="bottom" secondItem="nWA-RB-jSV" secondAttribute="top" id="f0n-J9-PGv"/>
+                            <constraint firstItem="1ra-CW-J6U" firstAttribute="leading" secondItem="ddK-SZ-T4f" secondAttribute="leading" id="nNR-H0-U2t"/>
+                            <constraint firstItem="GT3-Th-UBH" firstAttribute="leading" secondItem="ddK-SZ-T4f" secondAttribute="leadingMargin" id="pvs-0Q-CLt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="WebViewer" id="lcW-n7-Yzo"/>
+                    <connections>
+                        <outlet property="txtWebAddress" destination="GT3-Th-UBH" id="F6Q-kf-4M2"/>
+                        <outlet property="webView" destination="1ra-CW-J6U" id="xUf-U0-xKQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gsi-2Y-Uhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1466" y="75"/>
+        </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
             <objects>
@@ -377,9 +423,28 @@
             </objects>
             <point key="canvasLocation" x="-38" y="795"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="G2g-0l-TIx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k7O-L2-23N" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B44-So-tAx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HIx-RG-nY8" kind="relationship" relationship="rootViewController" id="zQZ-Zl-jFG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HdZ-fI-J9I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1466" y="-642"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="NR5-rz-z1t"/>
         <segue reference="Mkw-yN-RvE"/>
+        <segue reference="zQZ-Zl-jFG"/>
     </inferredMetricsTieBreakers>
 </document>
