--- a/Friends/Base.lproj/Main.storyboard
+++ b/Friends/Base.lproj/Main.storyboard
@@ -119,6 +119,9 @@
                                                 <constraint firstItem="nwa-aK-cfO" firstAttribute="leading" secondItem="DVb-fw-Ae3" secondAttribute="leadingMargin" id="zbe-vh-rQp"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ozv-zk-FVi" kind="show" id="Wpg-SC-bpo"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="wm9-Nh-6oj">
                                         <rect key="frame" x="0.0" y="295.5" width="600" height="44"/>
@@ -309,6 +312,41 @@
             </objects>
             <point key="canvasLocation" x="1466" y="75"/>
         </scene>
+        <!--Flickr Photos-->
+        <scene sceneID="CCF-yg-W8s">
+            <objects>
+                <collectionViewController id="ozv-zk-FVi" customClass="FlickrCollectionViewController" customModule="Friends" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="q9P-xV-bPx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7b7-tW-ppI">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cbu-tr-b5s">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="ozv-zk-FVi" id="kJg-lW-Yk6"/>
+                            <outlet property="delegate" destination="ozv-zk-FVi" id="Vr0-ec-XyZ"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Flickr Photos" id="HT9-0p-UoN"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="chv-PJ-hrl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1466" y="795"/>
+        </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
             <objects>
@@ -441,10 +479,29 @@
             </objects>
             <point key="canvasLocation" x="1466" y="-642"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sOR-Ds-xcG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Z5-Rg-l3T" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yjC-hX-0dE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ozv-zk-FVi" kind="relationship" relationship="rootViewController" id="1uO-ZL-qbD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fad-6T-tJl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="730" y="1487"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="NR5-rz-z1t"/>
+        <segue reference="cTE-oF-SlG"/>
         <segue reference="Mkw-yN-RvE"/>
-        <segue reference="zQZ-Zl-jFG"/>
+        <segue reference="Wpg-SC-bpo"/>
     </inferredMetricsTieBreakers>
 </document>
